# qiskit-on-iqm

./: .buildinfo  .coverage.rev130-154.vpn.iqm.fi.71168.XiWlaWLx  .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  API.html  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  README.md  README.rst  authors.html  changelog.html  circuit.qasm  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_report.xml  tox.ini  user_guide.html
.doctrees/: API.doctree  authors.doctree  changelog.doctree  index.doctree  license.doctree  user_guide.doctree
.doctrees/api/: iqm.qiskit_iqm.doctree  iqm.qiskit_iqm.examples.bell_measure.bell_measure.doctree  iqm.qiskit_iqm.examples.bell_measure.doctree  iqm.qiskit_iqm.examples.doctree  iqm.qiskit_iqm.examples.transpile_example.doctree  iqm.qiskit_iqm.examples.transpile_example.transpile_example.doctree  iqm.qiskit_iqm.fake_backends.doctree  iqm.qiskit_iqm.fake_backends.fake_adonis.IQMFakeAdonis.doctree  iqm.qiskit_iqm.fake_backends.fake_adonis.doctree  iqm.qiskit_iqm.fake_backends.fake_aphrodite.IQMFakeAphrodite.doctree  iqm.qiskit_iqm.fake_backends.fake_aphrodite.doctree  iqm.qiskit_iqm.fake_backends.fake_apollo.IQMFakeApollo.doctree  iqm.qiskit_iqm.fake_backends.fake_apollo.doctree  iqm.qiskit_iqm.fake_backends.fake_deneb.IQMFakeDeneb.doctree  iqm.qiskit_iqm.fake_backends.fake_deneb.doctree  iqm.qiskit_iqm.fake_backends.iqm_fake_backend.IQMErrorProfile.doctree  iqm.qiskit_iqm.fake_backends.iqm_fake_backend.IQMFakeBackend.doctree  iqm.qiskit_iqm.fake_backends.iqm_fake_backend.doctree  iqm.qiskit_iqm.iqm_backend.IQMBackendBase.doctree  iqm.qiskit_iqm.iqm_backend.doctree  iqm.qiskit_iqm.iqm_circuit.IQMCircuit.doctree  iqm.qiskit_iqm.iqm_circuit.doctree  iqm.qiskit_iqm.iqm_job.IQMJob.doctree  iqm.qiskit_iqm.iqm_job.doctree  iqm.qiskit_iqm.iqm_move_layout.IQMMoveLayout.doctree  iqm.qiskit_iqm.iqm_move_layout.doctree  (+33 more)
_images/: inheritance-0db097a19484b011fa56e42b900840f064016375.png.map  inheritance-1476c5608c6471430d49d34713fad6c3ade1b0a0.png.map  inheritance-1c428d38eb6f18cf5b51ced68f0a8ba30cef139b.png.map  inheritance-1e4c2a209dd44e548b670e3d85e1678847dc566d.png.map  inheritance-26a20f9ed99502cd79e457317317078dce4ad2f7.png.map  inheritance-570d9e52627da792e4be90f2a5c224ac56391b81.png.map  inheritance-6f0aef76aa1c5a61e488a2e8fa48e59fe25bc716.png.map  inheritance-70c2dd19d2216fb219ec633d3777d05488d17924.png.map  inheritance-75e0180bdf9be17e2213f412f696f378459de291.png.map  inheritance-7a481e94146bad1ae710ebd44dd97ca1287cb048.png.map  inheritance-861c237d3a22b8188eb47ed4cb7fc8bec3ffca05.png.map  inheritance-8db431d2c04a25e91ddc1e3733d37525da0c15f5.png.map  inheritance-a7b55ea5a927326f514d0f6e80820235a91e8623.png.map  inheritance-aff74f7fd95d9ed97034331f0a55f036ba37f66c.png.map  inheritance-d142b5edc5016e2df8f178a02a1647c116d05965.png.map  inheritance-dee36620585ec9f2015c0d56a5ae4eb3aec388fc.png.map  inheritance-df2b7da86dbe59db5719595f2c95516c7f63d81c.png.map  inheritance-e675d7a00f2184f4fe3421c0d6ad6727ab8c06c4.png.map  inheritance-e8c0055245445a4f9ddc03ce6d3b26492c21768c.png.map  inheritance-ed50d93446bd564c8a6b36d363bb2125791cb454.png.map  inheritance-f3739b97c3ed6dda43527b6235e1a86fa08784b8.png.map
_sources/: index.rst.txt  user_guide.rst  user_guide.rst.txt
_static/: documentation_options.js
api/: iqm.qiskit_iqm.examples.bell_measure.bell_measure.html  iqm.qiskit_iqm.examples.bell_measure.html  iqm.qiskit_iqm.examples.html  iqm.qiskit_iqm.examples.resonance_example.html  iqm.qiskit_iqm.examples.resonance_example.resonance_example.html  iqm.qiskit_iqm.examples.transpile_example.html  iqm.qiskit_iqm.examples.transpile_example.transpile_example.html  iqm.qiskit_iqm.fake_backends.fake_adonis.IQMFakeAdonis.html  iqm.qiskit_iqm.fake_backends.fake_adonis.html  iqm.qiskit_iqm.fake_backends.fake_aphrodite.IQMFakeAphrodite.html  iqm.qiskit_iqm.fake_backends.fake_aphrodite.html  iqm.qiskit_iqm.fake_backends.fake_apollo.IQMFakeApollo.html  iqm.qiskit_iqm.fake_backends.fake_apollo.html  iqm.qiskit_iqm.fake_backends.fake_deneb.IQMFakeDeneb.html  iqm.qiskit_iqm.fake_backends.fake_deneb.html  iqm.qiskit_iqm.fake_backends.fake_garnet.IQMFakeGarnet.html  iqm.qiskit_iqm.fake_backends.fake_garnet.html  iqm.qiskit_iqm.fake_backends.html  iqm.qiskit_iqm.fake_backends.iqm_fake_backend.IQMErrorProfile.html  iqm.qiskit_iqm.fake_backends.iqm_fake_backend.IQMFakeBackend.html  iqm.qiskit_iqm.fake_backends.iqm_fake_backend.html  iqm.qiskit_iqm.html  iqm.qiskit_iqm.iqm_backend.IQMBackendBase.html  iqm.qiskit_iqm.iqm_backend.IQMTarget.html  iqm.qiskit_iqm.iqm_backend.html  iqm.qiskit_iqm.iqm_circuit.IQMCircuit.html  iqm.qiskit_iqm.iqm_circuit.html  iqm.qiskit_iqm.iqm_circuit_validation.html  iqm.qiskit_iqm.iqm_circuit_validation.validate_circuit.html  iqm.qiskit_iqm.iqm_job.IQMJob.html  iqm.qiskit_iqm.iqm_job.html  iqm.qiskit_iqm.iqm_move_layout.IQMMoveLayout.html  iqm.qiskit_iqm.iqm_move_layout.generate_initial_layout.html  iqm.qiskit_iqm.iqm_move_layout.html  iqm.qiskit_iqm.iqm_naive_move_pass.IQMNaiveResonatorMoving.html  iqm.qiskit_iqm.iqm_naive_move_pass.build_IQM_star_pass.html  iqm.qiskit_iqm.iqm_naive_move_pass.build_IQM_star_pass_manager_config.html  iqm.qiskit_iqm.iqm_naive_move_pass.html  iqm.qiskit_iqm.iqm_naive_move_pass.transpile_to_IQM.html  iqm.qiskit_iqm.iqm_provider.IQMBackend.html  (+56 more)
docs/: API.rst  conf.py  index.rst  user_guide.rst
examples/: bell_measure.py  transpile_example.py
tests/: .pylintrc  conftest.py  test_bell_measure_example.py  test_fake.py  test_iqm_backend.py  test_iqm_backend_base.py  test_iqm_facade_backend.py  test_iqm_fake_backend.py  test_iqm_instruction_mapping.py  test_iqm_job.py  test_iqm_move_layout.py  test_iqm_naive_move_pass.py  test_iqm_operation_mapping.py  test_iqm_provider.py  test_iqm_single_qubit_gate_optimization.py  test_iqm_target.py  test_iqm_transpilation.py  test_qiskit_to_iqm.py  test_resonance_example.py  test_skeleton.py  test_transpiler_example.py  test_utils.py  utils.py
versions/1.0/: API.html  (+11 more)
(+2009 files in other folders)
