# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = qiskit-iqm
description = Qiskit adapter for IQM's quantum architectures
author = Qiskit on IQM developers
author_email = developers@meetiqm.com
license = Apache 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/iqm-finland/qiskit-on-iqm
project_urls =
    Documentation = https://iqm-finland.github.io/qiskit-on-iqm
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    numpy
    qiskit ~= 0.34.1
    iqm-client >= 1.10, < 2.0


# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = ~= 3.9

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install qiskit-iqm[dev,docs,testing]`
dev =
    tox == 3.24.5
docs =
    sphinx == 4.4.0
    sphinx-book-theme == 0.1.10
testing =
    isort == 5.10.1
    mockito == 1.3.0
    mypy == 0.931
    pytest == 7.0.1
    pytest-cov == 3.0.0
    pytest-isort == 3.0.0
    pytest-mypy == 0.9.1
    pytest-pylint == 0.18.0
cicd =
    twine >= 3.8.0, < 4.0
    wheel >= 0.37.1, < 1.0
